Fix the alignment of the character thumb for small resolutions

--- a/public/assets/sass/media-query.sass
+++ b/public/assets/sass/media-query.sass
@@ -74,6 +74,7 @@
     margin: 0 auto
   .blood-photo-holder
     background-image: none
+    width: 100%
   .character .btn
     width: 100%
     font-size: 25px
